# Mini-OpenClaw

./: .gitignore  README.md
backend/: .env.example  MEMORY.md  SKILLS_SNAPSHOT.md  app.py  pyproject.toml
backend/graph/: agent.py  skills_snapshot.py
backend/skills/get_weather/: SKILL.md
backend/tools/: __init__.py  fetch_url.py  rag.py  terminal.py  write_file.py
backend/workspace/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatStage.tsx  DynamicMonaco.tsx  Inspector.tsx  MessageBubble.tsx  NavBar.tsx  Sidebar.tsx  ToolStepBlock.tsx
